Revision history for Petal.

0.7
	- Fixed inline interpolation ${expr} bug
	- Everything is now XML encoded unless the 'structure' keyword is present
	- Added coderefs modifiers

0.64 Tue Sep  3 15:48:23 2002
	- Fixed extra AUTOLOAD bug
	- Fixed _split_expression critical bug 
	- Added test
	- Sorry for the broken 0.63 release :-(

0.63 Mon Sep  2 17:01:23 2002
	- Fixed petal:repeat documentation bug
	- Changed Petal::Parser::HTMLWrapper to preserve ignorable whitespaces
	- Fixed Petal stripping comments with Petal::Parser::HTMLWrapper
	- Fixed Petal not invoking methods which are defined via AUTOLOAD
	- Changed Petal::Canonicalizer::_split_expression to work with Perl 5.8.0
	- Changed Petal::Canonicalizer::_split_expression to remove warnings

0.62 Fri Aug 16 11:17:10 2002
	- Fixed entity bug due to XML::Parser expanding entities
	- Fixed method parameters bug
	- Fixed another method parameters bug
	- Fixed a couple of small documentation bugs
	- Fixed an XML declaration bug
	- Fixed '"' being converted to '&quot;' by Petal::Parser::HTMLWrapper
 
0.61 Mon Aug 12 11:50:50 2002
	- Fixed 'dummy content' closing tag bug
	- Fixed <a petal:attr="href string:test.cgi?fn=$first_name"> bugfix bug!

0.6 Sat Aug 10 14:59:53 2002
        - Fixed <a petal:attr="href string:test.cgi?fn=$first_name"> bug
	- Fixed declarations being striped out
	- Fixed <some:tag> being turned into <some> bug
	- Fixed petal:attributes="style nothing" does not delete 'style' *K*
	- Fixed Petal::CodeGenerator bug
	- Fixed a bug that prevented __is_last__ from being accessed
	- Applied William's patch to reduce amount of issued warnings
	- Changed the cache modules w/ new $Petal::INPUT and $Petal::OUTPUT
        - Implemented $Petal::INPUT and $Petal::OUTPUT for XHTML

0.5 Sat Aug  3 19:56:13 2002
	- Modifiers are now 'modifier:' rather than ':modifier'
	- Modifiers are now stackable (i.e. foo:bar:baz/buz)
        - Implemented TALES-like slash '/' as an alias for dot '.'